메인화면과 회원가입화면 연동
by madbum

--- a/Source/SCIT1thProject/bin/.gitignore
+++ b/Source/SCIT1thProject/bin/.gitignore
@@ -1,8 +1,11 @@
-/View/
-<<<<<<< HEAD
-/DAO/
-/Parser/
 /Client/
-=======
+/DAO/
+/MemberMapper.xml
+/Parser/
+/Server/
 /Util/
->>>>>>> master_branch
+/VO/
+/View/
+/db.properties
+/mybatis-config.xml
+/user.sql
