Auto stash before merge of "master_branch" and "origin/master_branch"

--- a/Source/SCIT1thProject/bin/.gitignore
+++ b/Source/SCIT1thProject/bin/.gitignore
@@ -1,9 +1,13 @@
-<<<<<<< HEAD
-/TestMain.class
+/Image/
+/MemberMapper.xml
 /View/
+/Client/
 /DAO/
-=======
 /Parser/
+/Server/
+/Util/
 /VO/
-/View/
->>>>>>> master_branch
+/db.properties
+/mybatis-config.xml
+/user.sql
+/TestMain.class
