--- a/Source/SCIT1thProject/bin/.gitignore
+++ b/Source/SCIT1thProject/bin/.gitignore
@@ -1,10 +1,14 @@
+/Image/
+/MemberMapper.xml
+/View/
 /Client/
 /DAO/
 /Parser/
 /Server/
-/TestMain.class
-/TestMain2.class
 /Util/
 /VO/
-/View/
-/Image/
+/db.properties
+/mybatis-config.xml
+/user.sql
+/TestMain.class
+/TestMain2.class
