달력 온도 노가다 완료

--- a/Source/SCIT1thProject/bin/.gitignore
+++ b/Source/SCIT1thProject/bin/.gitignore
@@ -1,2 +1,14 @@
-/View/
+/Client/
+/DAO/
 /Image/
+/MemberMapper.xml
+/Parser/
+/Server/
+/Util/
+/VO/
+/View/
+/db.properties
+/mybatis-config.xml
+/user.sql
+/TestMain.class
+/TestMain2.class
